--- a/NotifyMe/src/main/resources/application.properties
+++ b/NotifyMe/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.data.jpa.repositories.enabled=true
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
