--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_112","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\ADMIN\\wissen-project\\NotifyMe","type":"PROJECT","hints":{"PROJECT_NAME":"NotifyMe"}},"com.app.notifyme:NotifyMe:0.0.1"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_112","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
